# corc.core

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alloc.c  alloc.h  str.c  str.h
src/tests/: CMakeLists.txt
t/: CMakeLists.txt  str_test.c
